# turingdb-sdk-cpp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  dependencies.sh
.github/workflows/: ci.yml  ci_macos.yml  ci_ubuntu.yml
base/: CMakeLists.txt
base/include/: CMakeLists.txt  CallBackSignatures.h  RequestObject.h
base/storage/: CMakeLists.txt  TypedColumn.h
client/: CMakeLists.txt  JsonUtils.cpp  TuringClient.cpp  TuringClient.h  TuringClientResult.h
client/curl/: CurlClientResult.cpp  CurlRequest.cpp  CurlRequest.h
common/include/: RequestObject.h
curl/: CMakeLists.txt
requests/: CMakeLists.txt  JsonUtils.cpp  JsonUtils.h  TuringClient.cpp  TuringClient.h  TuringClientResult.cpp  TuringClientResult.h  TuringRequest.cpp  TuringRequest.h  TuringRequestResult.cpp  TuringRequestResult.h
samples/: CMakeLists.txt
samples/testcli/: CMakeLists.txt  TestCli.cpp
samples/testclient/: CMakeLists.txt  TestClient.cpp
src/: CMakeLists.txt
src/turingsdk/: JsonUtils.cpp  JsonUtils.h  TuringClient.cpp  TuringClient.h  TuringClientConfig.h  TuringClientResult.cpp  TuringClientResult.h
src/turingsdk/base/: TypedColumn.h
src/turingsdk/curl/: CurlClient.cpp  CurlClient.h  CurlClientResult.cpp  CurlClientResult.h  CurlRequest.cpp  CurlRequest.h
test/: CMakeLists.txt
test/googletest/googletest/include/gtest/internal/: gtest-port.h
test/requests/: CMakeLists.txt  TuringRequestTest.cpp
test/testutils/: CMakeLists.txt
turingClient/: JsonUtils.cpp  TuringClient.cpp  TuringClient.h  TuringClientResult.h
turingcurlclient/: CMakeLists.txt  CurlClient.cpp  CurlClient.h  CurlClientResult.cpp  CurlClientResult.h  CurlRequest.cpp  CurlRequest.h
